--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -28,4 +28,5 @@ $gray-4: #bdbdbd;
 
 $body-font: 'Barlow Condensed', sans-serif;
 $heading-font: 'Gilda Display', serif;
+$rubik-font: 'Rubik', sans-serif;
 $font-awesome: 'Font Awesome 6 Pro';
