--- a/sass/modules/_comment-list.scss
+++ b/sass/modules/_comment-list.scss
@@ -6,11 +6,16 @@
 .wp-block-comments {
   h2,
   .wp-block-comments-title {
-    font-size: 48px;
-    line-height: 56px;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 40px;
     margin-bottom: 0;
     font-weight: 500;
-    margin-top: -10px;
+    // margin-top: -10px;
+    border-bottom: 1px solid #efe1e1;
+    display: inline-block;
+    padding-bottom: 10px;
 
     @include sm {
       font-size: 32px;
@@ -227,15 +232,15 @@
           align-items: center;
           font-size: 16px;
           font-weight: 500;
-          color: $secondary-color;
-          border: 1px solid $primary-color;
+          color: $white;
+          background: $primary-color;
           padding: 5px 24px;
           gap: 8px;
           position: absolute;
           top: 0;
           right: 0;
           i {
-            color: $primary-color;
+            color: $white;
           }
           //
           //.btn_outline {
