--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -179,9 +179,9 @@
     }
   }
   .post-content {
-    p {
-      margin-top: 17px;
-    }
+    // p {
+    //   margin-top: 17px;
+    // }
 
     h2,
     h3,
@@ -235,23 +235,26 @@
   // Post Tags
   .blog-post-tag {
     display: inline-flex;
-
+    align-items: center;
+    padding: 20px 0;
+    border-top: 1px solid #efe1e1;
+    border-bottom: 1px solid #efe1e1;
     span {
-      font-size: 16px;
-      font-weight: 500;
-      display: inline-block;
       font-family: $heading-font;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 30px;
       color: $secondary-color;
       margin-bottom: 0;
       margin-right: 30px;
-      text-transform: uppercase;
       float: left;
       line-height: 24px;
     }
     .post-tag-list {
       display: flex;
       flex-wrap: wrap;
-      gap: 5px;
+      gap: 10px;
       align-items: center;
       line-height: 0;
 
@@ -260,6 +263,8 @@
         display: inline-block;
         font-size: 18px;
         line-height: 1;
+        border: 1px solid #efe1e1;
+        padding: 10px 20px;
         @include transition;
 
         &:hover {
@@ -396,7 +401,7 @@
       gap: 10px;
 
       i {
-        color: $blue-color;
+        color: $primary-color;
         font-size: 18px;
       }
       a {
