add: error page

--- a/sass/modules/breadcrumb/_breadcrumb.scss
+++ b/sass/modules/breadcrumb/_breadcrumb.scss
@@ -62,6 +62,9 @@
 }
 .breadcrumb-wrapper {
   position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   &:before {
     content: '';
     position: absolute;
