--- a/css/style.css
+++ b/css/style.css
@@ -84224,6 +84224,9 @@ body.admin-bar .header-area.style-7 {
 
 .breadcrumb-wrapper {
   position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .breadcrumb-wrapper:before {
   content: "";
@@ -89102,6 +89105,63 @@ ul.children {
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .error-wrapper {
+    padding-bottom: 100px;
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .error-wrapper {
+    padding-bottom: 80px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .error-wrapper {
+    padding-bottom: 60px;
+  }
+}
+.error-wrapper .error-content .error-title {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 400px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #222;
+  position: relative;
+  display: inline-block;
+}
+.error-wrapper .error-content .error-title:before {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #808287;
+  font-family: "Barlow Condensed";
+  font-size: 400px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: transparent;
+  content: "404";
+  position: absolute;
+  left: 7px;
+  top: 12px;
+  z-index: -1;
+}
+.error-wrapper .error-content .error-subtitle {
+  font-family: "Gilda Display", serif;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #808287;
+}
+.error-wrapper .error-content .desc {
+  font-family: "Gilda Display", serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+  color: #222;
+}
+
 .cta-area.style-3 {
   position: relative;
   z-index: 2;
@@ -90744,6 +90804,7 @@ ul.children {
   color: #808287;
 }
 .subscribe-form-widget .mc4wp-form-fields {
+  position: relative;
   display: flex;
   background-color: transparent;
   overflow: hidden;
@@ -90776,8 +90837,7 @@ ul.children {
   padding: 0 20px;
   font-size: 16px;
   width: 100%;
-  background: #322e2e;
-  border: 1px solid #514b4b;
+  background: #f6f6f6;
   border-right: 0;
 }
 .subscribe-form-widget .single-field *::-moz-placeholder {
@@ -90786,10 +90846,15 @@ ul.children {
 }
 .subscribe-form-widget .single-field *::placeholder {
   color: #808287;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px; /* 145% */
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 .subscribe-form-widget .submit-btn {
-  background-color: #aa8453;
-  color: #ffffff;
+  color: #808287;
   cursor: pointer;
   padding: 15px 19px;
   display: flex;
@@ -90800,6 +90865,14 @@ ul.children {
   font-weight: 900;
   letter-spacing: 0.6px;
   white-space: nowrap;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: transparent;
+  height: 100%;
+}
+.subscribe-form-widget .submit-btn i {
+  font-size: 30px;
 }
 .subscribe-form-widget .submit-btn span {
   display: none;
