--- a/css/style.css
+++ b/css/style.css
@@ -230,27 +230,19 @@ input:focus {
   padding-bottom: 100px;
 }
 
-.blog-area {
-  padding-top: 120px;
-  padding-bottom: 80px;
-}
-
 @media (max-width: 991px) {
-  .page-area,
-  .blog-area {
+  .page-area {
     padding-top: 100px;
     padding-bottom: 52px;
   }
 }
 @media (max-width: 767px) {
-  .page-area,
-  .blog-area {
+  .page-area {
     padding-top: 80px;
     padding-bottom: 32px;
   }
 }
-.page-area .page-links,
-.blog-area .page-links {
+.page-area .page-links {
   margin-bottom: 20px;
 }
 
@@ -89160,6 +89152,72 @@ ul.children {
   font-weight: 400;
   line-height: 40px;
   color: #222;
+}
+
+.error-wrapper.coming-soon {
+  position: relative;
+}
+.error-wrapper.coming-soon .shape {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.error-wrapper.coming-soon .error-content .error-title {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 250px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #222;
+  position: relative;
+  display: inline-block;
+  padding: 0 12px;
+}
+.error-wrapper.coming-soon .error-content .error-title:before {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #808287;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 250px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: transparent;
+  content: "Coming Soon";
+  position: absolute;
+  left: 20px;
+  top: 12px;
+  z-index: -1;
+}
+.error-wrapper.coming-soon .error-content .countdown-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+}
+.error-wrapper.coming-soon .error-content .time-unit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 10px;
+}
+.error-wrapper.coming-soon .error-content .separator {
+  font-size: 2rem;
+  color: #7b7b7b;
+}
+.error-wrapper.coming-soon .error-content .number {
+  font-family: "Gilda Display", serif;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.error-wrapper.coming-soon .error-content .label {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px; /* 120.833% */
+  text-transform: uppercase;
 }
 
 .cta-area.style-3 {
