--- a/sass/modules/checknow/_checknow.scss
+++ b/sass/modules/checknow/_checknow.scss
@@ -45,7 +45,7 @@
         display: inline-block;
       }
 
-      .date-container input[type='date'] {
+      .date-container input[type="date"] {
         // padding-left: 35px; /* Space for the icon */
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -59,16 +59,16 @@
         transform: translateY(-50%);
         color: $white;
       }
-      input[type='date']::-webkit-calendar-picker-indicator {
+      input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
         -webkit-appearance: none;
       }
 
-      input[type='date']::-moz-calendar-picker-indicator {
+      input[type="date"]::-moz-calendar-picker-indicator {
         display: none;
       }
 
-      input[type='date']::-ms-clear {
+      input[type="date"]::-ms-clear {
         display: none;
       }
     }
@@ -90,7 +90,7 @@
     }
 
     .select-container::after {
-      content: '\f078'; /* FontAwesome down arrow */
+      content: "\f078"; /* FontAwesome down arrow */
       font-family: $font-awesome;
       position: absolute;
       right: 20px;
