--- a/sass/modules/about-image-card/_about-image-card-one.scss
+++ b/sass/modules/about-image-card/_about-image-card-one.scss
@@ -7,6 +7,8 @@
         z-index: 5;
         width: 500px;
         height: 612px;
+        margin-left: 66px;
+        margin-bottom: 40px;
         @include rmaxwd(1550) {
           margin-left: 50px;
         }
@@ -64,7 +66,7 @@
       .square-shape {
         position: absolute;
         bottom: -40px;
-        left: -70px;
+        left: 0;
         width: 450px;
         height: 526px;
         border: 1px solid $primary-color;
