--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -330,7 +330,11 @@
       display: inline-block;
       padding: 0;
       position: relative;
-
+      &:last-child {
+        a {
+          padding-right: 0 !important;
+        }
+      }
       &.active,
       &.current-menu-ancestor {
         position: relative;
@@ -350,8 +354,10 @@
       }
       &.dropdown {
         > a {
-          padding-right: 30px !important;
-
+          padding-right: 45px !important;
+          @include lg {
+            padding-right: 30px !important;
+          }
           &:before {
             visibility: visible;
           }
@@ -398,7 +404,7 @@
       }
       a {
         display: block;
-        padding: 54px 24px;
+        padding: 54px 36px;
         text-decoration: none;
         text-transform: capitalize;
         @include transition;
@@ -410,10 +416,13 @@
         line-height: normal;
         letter-spacing: 2.7px;
         text-transform: uppercase;
+        @include xl {
+          padding: 54px 25px;
+        }
 
         &:before {
           position: absolute;
-          content: '\f107';
+          content: "\f107";
           font-family: $font-awesome;
           //transform: rotate(45deg);
           //border: solid $white;
@@ -423,9 +432,12 @@
           //margin-top: -5px;
           font-size: 14px;
           top: 50%;
-          right: 6px;
+          right: 20px;
           line-height: 0;
           visibility: hidden;
+          @include lg {
+            right: 8px;
+          }
         }
         &:hover {
           color: $primary-color;
@@ -456,7 +468,7 @@
     }
     ul {
       background-color: $white;
-      left: 0;
+      left: 10px;
       opacity: 0;
       position: absolute;
       text-align: left;
@@ -688,7 +700,7 @@
         }
       }
 
-      input[type='search'] {
+      input[type="search"] {
         margin-top: 0 !important;
         background: transparent !important;
         border: 0 !important;
