--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -157,6 +157,26 @@
           margin-left: 110px;
         }
       }
+      .slick-arrow {
+        width: 60px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        left: 50%;
+        top: 0;
+        &.next-btn {
+          transform: translate(-0%, -100%);
+          margin-left: 5px;
+        }
+        &.prev-btn {
+          margin-right: 5px;
+          background-color: $primary-color;
+          color: $white;
+          transform: translate(-100%, -99%);
+        }
+      }
     }
   }
 }
@@ -229,6 +249,12 @@
 .checknow-form {
   &.styel-2 {
     transform: translateY(-50%);
+    .inner-wrapper {
+      background-color: rgba(255, 255, 255, 0.2);
+      form {
+        box-shadow: 0px 4px 20px 0px rgba(234, 234, 234, 0.3);
+      }
+    }
   }
 }
 
@@ -251,6 +277,13 @@
     }
     .testimonial-card {
       &.style-2 {
+        @include transition;
+        &:hover {
+          &:after {
+            background-color: $primary-color;
+            @include transition;
+          }
+        }
         @include rmaxwd(991) {
           margin-top: 30px;
         }
@@ -335,6 +368,9 @@
       height: 100%;
       background-color: $white;
       z-index: 2;
+      margin-top: -3px;
+      height: 103%;
+      width: 102%;
 
       &:before {
         content: "";
@@ -342,7 +378,7 @@
         top: 0;
         left: -100%;
         width: 100%;
-        height: 100%;
+        height: 103%;
         z-index: 1;
         background-color: $white;
       }
