fix: home-2 testimonial-slider

--- a/css/style.css
+++ b/css/style.css
@@ -91545,6 +91545,8 @@ ul.children {
   font-weight: 400;
   line-height: 29px;
   border: 1px solid transparent;
+  position: relative;
+  background-color: #aa8453;
 }
 .subscribe-area.style-1 .subscribe-form-widget .submit-btn:hover {
   background-color: #222;
