--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -509,6 +509,8 @@
         font-weight: 400;
         line-height: 29px;
         border: 1px solid transparent;
+        position: relative;
+        background-color: $primary-color;
         &:hover {
           background-color: $black;
           border-color: $white;
