--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -95,6 +95,9 @@
       padding-top: 60px;
       padding-bottom: 80px;
     }
+    .section-title {
+      margin-top: -4px;
+    }
     .bg-image {
       position: absolute;
       right: 0;
@@ -167,14 +170,14 @@
         left: 50%;
         top: 0;
         &.next-btn {
-          transform: translate(-0%, -100%);
+          transform: translate(-12%, -100%);
           margin-left: 5px;
         }
         &.prev-btn {
           margin-right: 5px;
           background-color: $primary-color;
           color: $white;
-          transform: translate(-100%, -99%);
+          transform: translate(-125%, -99%);
         }
       }
     }
@@ -184,8 +187,14 @@
 // Service-area style-2
 .service-area {
   &.style-2 {
+    position: relative;
     &:before {
       display: none;
+    }
+    .shape {
+      position: absolute;
+      right: 50px;
+      top: 80px;
     }
   }
 }
@@ -201,7 +210,7 @@
       padding-bottom: 200px;
     }
     &:before {
-      content: "";
+      content: '';
       background-color: rgba(49, 43, 43, 0.8);
       position: absolute;
       left: 0;
@@ -373,7 +382,7 @@
       width: 102%;
 
       &:before {
-        content: "";
+        content: '';
         position: absolute;
         top: 0;
         left: -100%;
