--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -719,7 +719,7 @@
       padding: 0 20px;
       font-size: 16px;
       width: 100%;
-      background: #f6f6f6;
+      background: #322e2e;
       // border: 1px solid #;
       border-right: 0;
     }
@@ -748,7 +748,7 @@
 
     *::placeholder {
       color: $gray;
-      font-size: 20px;
+      font-size: 16px;
       font-style: normal;
       font-weight: 400;
       line-height: 29px; /* 145% */
